# tcfdawang

./: .env.example  .gitignore  README.md  agents.md  frontend_spec.md  pyproject.toml  spec.md
app/: main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  conversations.py  fetch.py  flashcards.py  paragraphs.py  questions.py  sentences.py  sessions.py  tasks.py
app/config/: settings.py
app/db/: base.py
app/db/schemas/: __init__.py  answer.py  chunk.py  conversation.py  flashcard.py  lexeme.py  live_turn.py  paragraph.py  question.py  task.py
app/fetchers/: __init__.py  base.py  manager.py  reussir.py  seikou.py  tanpaku.py  utils.py
app/llm/: __init__.py  chains.py  prompts.py  schemas.py
app/models/: answer.py  fetch.py  fetch_task.py  flashcard.py  lexeme.py  live.py  paragraph.py  question.py
app/services/: fetch_service.py  flashcard_service.py  llm_service.py  paragraph_service.py  question_service.py  session_service.py  task_query_service.py  task_service.py
app/tests/: test_answer_session_models.py  test_conversations_api.py  test_fetch_api.py  test_fetch_manager.py  test_flashcard_api.py  test_paragraph_api.py  test_questions_api.py  test_sessions_api.py  test_tasks_api.py
config/: fetchers.yaml
docs/: project_structure.md
docs/references/: fetch_prototype.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: answerGroups.ts  answers.ts  conversations.ts  flashcards.ts  http.ts  paragraphs.ts  questions.ts  (+3 more)
scripts/: resplit_sentences.py
(+28 files in other folders)
