[project]
name = "tcfdawang"
version = "0.1.0"
description = "Backend service for the TCF learning platform."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110.0",
    "sqlmodel>=0.0.14",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "PyYAML>=6.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
dev-dependencies = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
